# robo_maestro

./: .gitignore  ERROR_CATCH.md  INSTALL.md  README.md  digest.txt  package.xml  setup.cfg  setup.py
docs/: CAMERA_CALIBRATION.md  ERROR_CATCH.md  INSTALL.md  RUN.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: collect_dataset.launch.py  control_robot_eef.launch.py  moveit_cmd.launch.py  read_eef_pose.launch.py  run_policy.launch.py  run_policy_lerobot.launch.py  run_policy_pointact.launch.py
log/: latest_build
offline_scripts/: viz_batch.py
reference_only/: test_new_joystick.py
robo_maestro/: collect_dataset.py  moveit_cmd.py  reference.py  run_policy.py  run_policy_lerobot.py  run_policy_pointact.py
robo_maestro/assets/: taskvars_instructions.json
robo_maestro/core/: observer.py  robot.py  tf.py
robo_maestro/dataset_collection/: DATA_COLLECTION.md  collect_dataset.py  edit_collected_dataset.py  viz_collected_episode.py  viz_policy_eval.py
robo_maestro/dev_tools/: check_workspace_bbox.py  control_robot_in_EEF_pose.py  read_eef_pose.py  viz_policy_eval.py
robo_maestro/envs/: __init__.py  base.py
robo_maestro/lerobot_bridge/: __init__.py  compat.py  services_pb2_grpc.py  transport_utils.py
robo_maestro/schemas/: __init__.py  camera.py  collected_dataset.py  gembench.py  observation.py
robo_maestro/utils/: DATA_COLLECTION.md  constants.py  (+4 more)
scripts/: check_collected_episode.py  check_data.py  edit_collected_dataset.py  mock_server_call.py  mock_server_call_and_display.py  sandbox.py
tools/: joystick_debug.py
(+22 files in other folders)
