<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robo_maestro</name>
  <version>0.0.0</version>
  <description>robo_maestro: Python Package to interact with Paris Robotics Lab's UR5</description>
  <maintainer email="paul.pacaud@inria.fr">Paul Pacaud</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>prl_ur5_moveit</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
